[package]
name = "swiftstream-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
bytes = "1.10.1"
chrono = "0.4.41"
env_logger = "0.11.8"
futures = "0.3.31"
http-body = "1.0.1"
log = "0.4.27"
m3u8-rs = "6.0.0"
reqwest = "0.12.22"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "sync", "net", "fs", "io-util"] }
tokio-util = { version = "0.7.15", features = ["io", "io-util"] }
