[package]
name = "mediastream-rs"
version = "0.1.1"
edition = "2024"
description = "A library for parsing and generating m3u8 file"
license = "MIT"
homepage = "https://github.com/Klrohias/swiftstream/tree/main/mediastream-rs"
repository = "https://github.com/Klrohias/swiftstream"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
smol_str = "0.3.2"
