[package]
name = "typed-container"
version = "0.1.0"
edition = "2024"
description = "A simple container for IoC"
license = "MIT"
homepage = "https://github.com/Klrohias/swiftstream/tree/main/typed-container"
repository = "https://github.com/Klrohias/swiftstream"

[dependencies]
log = "0.4.27"
smol_str = "0.3.2"
