[package]
name = "typed-container"
version = "0.1.2"
edition = "2024"
description = "A simple container for IoC"
license = "MIT"
homepage = "https://github.com/Klrohias/swiftstream/tree/main/typed-container"
repository = "https://github.com/Klrohias/swiftstream"

[dependencies]
derivative = "2.2.0"
